	When a device driver calls devsw_attach() it has the option of attaching a block device structure and a character device structure, or, just the character device structure. With the existing code, if a driver elects not to attach a block device structure and if it asks for a major number to be dynamically assigned to its character interface, that driver will not be able to detach and reattach its character driver interface.  This is a very long standing bug which didn't come to light until we began using loadable kernel modules more heavily.  this patch fixes this problem.  With this patch in place, drivers that implement only a character device interface may detach and reattach that character interface as often as they need to.

Fixes PR kern/57229